<resources>
    <string name="app_name">GeneralFelicaSimulator</string>
    <string name="service_desc">Simulate Felica Generally</string>
    <string name="ununlocked_notice">This device is not Unlocked.</string>
    <string name="default_idm">0114C7480B210A10</string>
    <string name="default_sys">8AC3</string>
    <string name="idm">IDm</string>
    <string name="sys">Sys</string>
    <string name="system_code">System Code</string>
    <string name="update">UPDATE</string>
    <string name="save">SAVE</string>
    <string name="card_delete_description">Delete Card</string>
    <string name="error_invalid">Error. Invalid</string>
    <string name="untitled">"Untitled</string>
</resources>